--- a/client/index.html
+++ b/client/index.html
@@ -65,7 +65,7 @@
     </div>
      <script>
        document.getElementById("naruto").onclick = function () {
-        axios.get("http://localhost:4000/api/naruto/", {})
+        axios.get("http://localhost:4000/api/naruto/")
         .then(function(response) {
           // const data = response.data;
           let speak = document.getElementById('speak');
