--- a/client/index.html
+++ b/client/index.html
@@ -67,9 +67,9 @@
        document.getElementById("naruto").onclick = function () {
         axios.get("http://localhost:4000/api/naruto/")
         .then(function(response) {
-          // const data = response.data;
+          const data = response.data;
           let speak = document.getElementById('speak');
-          speak.textContent = response
+          speak.textContent = data
        })
       }
     </script>
